<resources>
    <string name="app_name">Kerala Lottery</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="emailAddress">Email Address</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="text1">Don\'t have an Account?  <b><u>Sign In</u></b></string>
    <string name="note">Note*</string>
    <string name="noteText">Do Not Share Your Lottery with anyone, Beware of fake lottery apps and websites
that claim to be us. We do not have any website and we do not offer prize guarantees
or any other special offers. Only purchase lottery tickets from your trusted agents.</string>
    <string name="already_have_an_account_login">Already have an Account? <u><b>Login</b></u></string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="getOtp">Get Otp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="winners">Winners</string>
    <string name="name">Name :</string>
    <string name="your_name_will_be_displayed_here">Your Name</string>
    <string name="mobile_number">Mobile Number :</string>
    <string name="your_number">Your Number</string>
    <string name="your_tickets">Your Tickets</string>
    <string name="profile">Profile</string>
    <string name="_10">₹10</string>
    <string name="_50">₹50</string>
    <string name="_70">₹70</string>
    <string name="_500">₹500</string>
    <string name="_80">₹80</string>
    <string name="no_upi">No UPI app found, please install one to continue</string>
    <string name="_50_lottery">₹50 Lottery -</string>
    <string name="_70_lottery">₹70 Lottery -</string>
    <string name="_80_lottery">₹80 Lottery -</string>
    <string name="_500_lottery">₹500 Lottery -</string>
    <string name="_0"><i>0</i></string>
    <string name="amount">Amount :</string>
    <string name="convinience_fee">Convenience Fee :</string>
    <string name="total">Total :</string>
    <string name="_10_lottery">₹10 Lottery -</string>


</resources>