<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/green"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:src="@drawable/banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="104dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:alpha="0.6"
            android:hint="@string/fullName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="20dp"
            android:autofillHints=""
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/RegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:alpha="0.6"
            android:autofillHints=""
            android:hint="@string/emailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="20dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/inputName"
            app:layout_constraintStart_toStartOf="@+id/inputName"
            app:layout_constraintTop_toBottomOf="@+id/inputName" />


        <EditText
            android:id="@+id/inputPhno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:alpha="0.6"
            android:hint="@string/mobileNumber"
            android:inputType="phone"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/RegEmail"
            app:layout_constraintStart_toStartOf="@+id/RegEmail"
            app:layout_constraintTop_toBottomOf="@+id/RegEmail" />

        <EditText
            android:id="@+id/inputPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:alpha="0.6"
            android:autofillHints=""
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/inputPhno"
            app:layout_constraintStart_toStartOf="@+id/inputPhno"
            app:layout_constraintTop_toBottomOf="@+id/inputPhno" />

        <EditText
            android:id="@+id/inputPwdCnfm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:alpha="0.6"
            android:autofillHints=""
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/inputPwd"
            app:layout_constraintStart_toStartOf="@+id/inputPwd"
            app:layout_constraintTop_toBottomOf="@+id/inputPwd" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/signUp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/inputPwdCnfm"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="@+id/inputPwdCnfm"
            app:layout_constraintTop_toBottomOf="@+id/inputPwdCnfm" />

        <TextView
            android:id="@+id/textLgn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="@+id/signUpBtn"
            app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/note"
            android:textColor="@color/red"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLgn" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/noteText"
            android:textColor="@color/white"
            android:textSize="8sp"
            android:alpha="0.6"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>